--- a/client/css/style.css
+++ b/client/css/style.css
@@ -35,3 +35,19 @@
 #dgNav {
     margin-bottom: 0px;
 }
+
+
+.tabTitle{
+    font-size: 1.2em;
+}
+
+.nav-tabs > li, .nav-pills > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
+}
+
+.nav-tabs, .nav-pills {
+    text-align:center;
+}
