--- a/client/css/style.css
+++ b/client/css/style.css
@@ -41,13 +41,18 @@
     font-size: 1.2em;
 }
 
+
+
 .nav-tabs > li, .nav-pills > li {
     float:none;
     display:inline-block;
-    *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
+    *display:inline; 
+     zoom:1; 
 }
 
 .nav-tabs, .nav-pills {
     text-align:center;
 }
+/* This is
+a multi-line
+comment */
